--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="container">
+		<h1>Testimonials</h1>
+		<blockquote class="test">This product is amazing! I highly recomment it to anyone in need of a solution like this.
+		<footer class="au">~John Doe</footer></blockquote>
+	
+		<blockquote class="test">I have been using yhis for a few weeks now and it has completely transformed my workflow.
+		<footer  class="au">~Jane Smith</footer></blockquote>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
