--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="container">
-		<h1>Testimonials</h1>
+		<h1><p>Testimonials</p></h1>
 		<blockquote class="test">This product is amazing! I highly recomment it to anyone in need of a solution like this.
 		<footer class="au">~John Doe</footer></blockquote>
 	
