--- a/main.html
+++ b/main.html
@@ -9,12 +9,21 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="container">
-		<h1><p>Testimonials</p></h1>
-		<blockquote class="test">This product is amazing! I highly recomment it to anyone in need of a solution like this.
-		<footer class="au">~John Doe</footer></blockquote>
-	
-		<blockquote class="test">I have been using yhis for a few weeks now and it has completely transformed my workflow.
-		<footer  class="au">~Jane Smith</footer></blockquote>
+	   <h1>Testimonials</h1>
+		<div>
+			<blockquote class="test">
+				<p>This product is amazing! I highly recomment it to anyone in need of a solution like this.</p>
+		        <footer class="au"><p>~John Doe</p></footer>
+			</blockquote>
+		</div>
+			
+		
+	    <div>
+		<blockquote class="test" >
+			<p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+		</blockquote>
+		<footer  class="au"><p>~Jane Smith</p></footer>
+		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
